Fix text alignment for rtl languages (#1269)
* Fix text alignment for rtl languages

* Update the link to the Persian translation

--- a/static/css/rtl.css
+++ b/static/css/rtl.css
@@ -2,6 +2,10 @@ html {
   direction: rtl;
 }
 
+body {
+  text-align: initial;
+}
+
 h1, h2, h3, h4, h5, h6 {
   letter-spacing: normal;
 }
